--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JSON to Protobuf</title>
+    <script src="https://analytics.ahrefs.com/analytics.js" data-key="2eNO7jS4q3dKAsgvccIzbw" async></script>
   </head>
   <body>
     <div id="root"></div>
